--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-react-boilerplate",
+  "name": "react-weather",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Gabriel von Platen",
