--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.16",
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -34,6 +35,7 @@
     "react-router-dom": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "styled-components": "^4.3.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "url-loader": "^2.0.0",
