--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "normalize.css": "^8.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-modal": "^3.5.1",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.3",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "styled-components": "^4.3.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2",
     "url-loader": "^2.0.0",
-    "validator": "^10.7.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.7.2"
