--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     // "isolatedModules": false,
-    "jsx": "preserve",
-    "types": ["node", "styled-components"]
+    "jsx": "react",
+    "types": [
+      "node",
+      "styled-components",
+      "react-redux",
+      "redux-thunk",
+      "redux"
+    ]
   },
   "include": ["src"]
 }
